testdata/baselines/reference/compiler/unusedLocalsInForInOrOf1.errors.txt
unusedLocalsInForInOrOf1(2,15): error TS1003: Identifier expected.
unusedLocalsInForInOrOf1(8,15): error TS1003: Identifier expected.
unusedLocalsInForInOrOf1(9,12): error TS1003: Identifier expected.
unusedLocalsInForInOrOf1(9,14): error TS1128: Declaration or statement expected.
unusedLocalsInForInOrOf1(9,14): error TS1005: ',' expected.
unusedLocalsInForInOrOf1(9,14): error TS1128: Declaration or statement expected.
unusedLocalsInForInOrOf1(9,14): error TS1005: ';' expected.
unusedLocalsInForInOrOf1(9,14): error TS1128: Declaration or statement expected.
unusedLocalsInForInOrOf1(9,14): error TS1005: '}' expected.

==== unusedLocalsInForInOrOf1 (9 errors) ====
    
    for (let x of [1, 2]) {
                  ~
!!! error TS1003: Identifier expected.
      function f() {
        x;
      }
    }
    
    for (let x of [1, 2]) {
                  ~
!!! error TS1003: Identifier expected.
      let f = () => {
               ~
!!! error TS1003: Identifier expected.
                 ~~
!!! error TS1128: Declaration or statement expected.
                 ~~
!!! error TS1005: ',' expected.
                 ~~
!!! error TS1128: Declaration or statement expected.
                 ~~
!!! error TS1005: ';' expected.
                 ~~
!!! error TS1128: Declaration or statement expected.
                 ~~
!!! error TS1005: '}' expected.
        x;
      };
    }
    
    for (const x of [1, 2]) {
      function g() {
        x;
      }
    }
    
    for (let x in { a: 1, b: 2 }) {
      function f2() {
        x;
      }
    }
    
    for (let x in { a: 1, b: 2 }) {
      let f2 = () => {
        x;
      };
    }
    
    for (const x in { a: 1, b: 2 }) {
      function g2() {
        x;
      }
    }
    
    for (let { x } of [{ x: 1 }, { x: 2 }]) {
      function f3() {
        x;
      }
    }
    
    for (let { x } of [{ x: 1 }, { x: 2 }]) {
      let f3 = () => {
        x;
      };
    }
    
    for (const { x } of [{ x: 1 }, { x: 2 }]) {
      function g3() {
        x;
      }
    }
    
